# slack-flows

./: Cargo.toml  package-lock.json  package.json
lib/: slack.ts  upstash.ts
pages/: _app.tsx  index.tsx
pages/api/: auth.ts  hello.ts
pages/api/[flows_user]/: access.ts  send.ts  upload.ts
pages/api/[flows_user]/[flow_id]/: listen.ts  revoke.ts
pages/api/[flows_user]/listen/: [flow_id].ts
pages/api/[flows_user]/listen/[flow_id]/: [wasm_file].ts
pages/api/access/: [flow_user].ts
pages/api/event/: [channel].ts
pages/api/users/: [flow_user].ts
slack-sdk/: Cargo.toml  README.md
slack-sdk/src/: lib.rs
slack-wasi/: Cargo.toml
slack-wasi/src/: lib.rs
src/: lib.rs
